--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -43,10 +43,12 @@
             {% else %}
                 <strong> There are no Pages available. </strong>
             {% endif %}
-        </div>
+        </div><br/>
 
+        <a href="/rango/add_category/">Add a New Category </a><br />
+        
         <div>
-            <a href="/rango/about">About</a><br/>
+            <a href="/rango/about">About</a><br/><br/>
             <img src="{% static "images/flower.jpeg" %}"
                 alt="Picture of Rango" /> <!-- New line -->
         </div>
