--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% load rango_template_tags %}
     <head lang="en">
         <meta charset="UTF-8" />
         <title> 
@@ -17,6 +18,11 @@
                 This is body's block default content.
             {% endblock %}
         </div>
+        <div>
+            {% block sidebar_block %}
+                {% get_category_list category%}
+            {% endblock %}
+        </div>
         <hr />
         <div>
             <ul>
@@ -25,5 +31,6 @@
                 <li><a href="{% url 'rango:index' %}">Index</a></li>
             </ul>
         </div>
+
     </body>
 </html>
