--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,6 +8,7 @@
         <h1>Rango says ...</h1>
         <div>
             This tutorial had been put together by <strong>{{username}} </strong><br/>
+            Visits: {{visits}}
         </div>
         <div>
             <a href="/rango/">Main Page</a><br/>
