--- a/templates/rango/about_base.html
+++ b/templates/rango/about_base.html
@@ -7,7 +7,8 @@
 
 {% block body_block %}
     <div>
-        This tutorial had been put together by <strong>{{username}}</strong><br/> 
+        This tutorial had been put together by <strong>{{username}}</strong><br/>
+        Visits: {{ visits }} 
     </div>
     </br>
     <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of cat" />
