--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -8,7 +8,7 @@
 {% block body_block %}
     {% if registered %}
         <h1> Thank you for registering!!</h1>
-        <a href="{% url 'rango:index' %}">TReturn to HomePage</a>
+        <a href="{% url 'rango:index' %}">Return to HomePage</a>
     {% else %}
         <strong>Register here!</strong>
         <form id="register_form" method="POST" action="{% url 'rango:register' %}" 
