--- a/templates/rango/category_base.html
+++ b/templates/rango/category_base.html
@@ -21,7 +21,8 @@
         {% else %}
             <strong> There is no page available for this category</strong>
         {% endif %}
-        <a href="{% url 'rango:add_page' category.slug %}">Add a Page</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'rango:add_page' category.slug %}">Add a Page</a>
     {% else %}
         The specified category does not exist!!
     {% endif %}
