--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -11,7 +11,7 @@
         <form id="login_form" method="post" action="{% url 'rango:login' %}" >
             {% csrf_token %}
             Username: <input type="text" name="username" value="" size="50" /><br>
-            Password: <input type="text" name="password" value="" size="50" /><br>
+            Password: <input type="password" name="password" value="" size="50" /><br>
             <input type="submit" name="submit" value="Login" />
         </form>
     </div>
