--- a/templates/rango/category_base.html
+++ b/templates/rango/category_base.html
@@ -23,6 +23,7 @@
         {% endif %}
         {% if user.is_authenticated %}
             <a href="{% url 'rango:add_page' category.slug %}">Add a Page</a>
+        {% endif %}
     {% else %}
         The specified category does not exist!!
     {% endif %}
