--- a/templates/rango/cats.html
+++ b/templates/rango/cats.html
@@ -2,16 +2,17 @@
     {% if cats %}
         {% for cat in cats %}
             {% if cat == act_cat %}
-                <li>
-                <strong>
-                    <a href="{% url 'rango:show_category' cat.slug %}">{{ cat.name }}
-                </strong>
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'rango:show_category' cat.slug %}">
+                        <span data-feather="archive"></span>{{ cat.name }}</a>
                 </li>
             {% else %}
-                <li><a href="{% url 'rango:show_category' cat.slug %}">{{ cat.name }} </li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'rango:show_category' cat.slug %}">
+                    <span data-feather="archive"></span>
+                    {{ cat.name }} </a></li>
             {% endif %}
         {% endfor %}
     {% else %}
-        <li><strong>There are no categories available.</strong></li>
+        <li class="nav-item">There are no categories available.</li>
     {% endif %}
 </ul>
