--- a/templates/rango/index_base.html
+++ b/templates/rango/index_base.html
@@ -2,43 +2,62 @@
 {% load static %}
 
 {% block body_block %}
-    <h1>
-        {% if user.is_authenticated %}
-            Howdy {{user.username }}!!
-        {% else %}
-            Hey there Partner!!
-        {% endif %}
-    </h1>
-
-    <strong>{{ boldmessage }} </strong>
-
-    <div>
-        <strong>Most liked Categories </strong>
-        {% if categories %}
-        <ul>
-            {% for cat in categories %}
-                <li><a href="{% url 'rango:show_category' cat.slug %}">{{ cat.name }}</a></li>
-            {% endfor %}
-        </ul>
-        {% else %}
-            <strong> There are no categories available. </strong>
-        {% endif %}
-        <br>
+    <div class="jumbotron p-4"> 
+        <div class="container"> 
+            <h1 class="jumbotron-heading">Rango says…</h1>
+            <div> 
+                <h2 class="h2"> 
+                    {% if user.is_authenticated %}
+                        Howdy {{ user.username }}! 
+                    {% else %}
+                        Hey there partner! 
+                    {% endif %} 
+                </h2>
+                <strong>{{ boldmessage }} </strong>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+            <div class="card mb-6">
+                <div class="card-body">
+                    <h2>Most liked Categories</h2>
+                    <p class="card-text">                
+                        {% if categories %}
+                        <ul class="list-group">
+                            {% for cat in categories %}
+                                <li class="list-group-item"><a href="{% url 'rango:show_category' cat.slug %}">{{ cat.name }}</a></li>
+                            {% endfor %}
+                        </ul>
+                        {% else %}
+                            <strong>There are no categories available.</strong>
+                        {% endif %}
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card mb-6">
+                <div class="card-body">
+                    <h2> Most liked Pages </h2>
+                    <p class="card-text"> 
+                        {% if pages %}
+                            <ul class="list-group">
+                                {% for page in pages %}
+                                    <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        {% else %}
+                            <strong>There are no pages available.</strong>
+                        {% endif %}
+                    </p>
+                </div>
+            </div>
+        </div>
+      </div>
     </div>
 
-    <div>
-        <strong> Most liked Pages </strong><br>
-        {% if pages %}
-            <ul>
-                {% for page in pages %}
-                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <strong>There are no pages available.</strong>
-        {% endif %}
-    </div>
-    <br>
     <img src="{% static 'images/flower.jpeg' %}" alt="Picture of flower" />
 
 {% endblock %}
