--- a/templates/rango/add_category_base.html
+++ b/templates/rango/add_category_base.html
@@ -6,9 +6,14 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1> Add Category </h1></br>
-    <div>
-        <form id="category_form" method="post" action="/rango/add_category">
+    <div class="jumbotron p-2"> 
+        <div class="container"> 
+            <h1 class="jumbotron-heading">Add Category </h1></br>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+        <form role="form" id="category_form" method="post" action="{% url 'rango:add_category' %}">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
@@ -17,10 +22,11 @@
             {% for v_field in form.visible_fields %}
                 {{ v_field.help_text }}
                 {{ v_field.errors }}
-                {{ v_field }}
-                <br>
+                {{ v_field }}<br>
+                <div class="p-2"></div>
             {% endfor %}</br>
-            <input type="submit" name="submit" value="Create Category" />
+            <button class="btn btn-primary" type="submit" name="submit">Create Category</button>
+            <div class="p-5"></div>
         </form>
     </div>
 {% endblock %}
