--- a/templates/rango/add_page_base.html
+++ b/templates/rango/add_page_base.html
@@ -2,25 +2,32 @@
 {% load static %}
 
 {% block title_block %}
-    Rango - Add Page
+    Add a Page
 {% endblock %}
 
 {% block body_block %}
-    <h1>Add Page to {{ category }} </h1>
-    <div>
-        <form id="page_form" method="post" action="/rango/add_page/">
+<div class="jumbotron p-4">
+    <div class="container">
+        <h1 class="jumbotron-heading">Add a Page to {{ category.name }}</h1>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <form role="form" id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
             {% endfor %}
-            {% for v_field in form.visible_fields %}
-                {{ v_field.help_text }}
-                {{ v_field.errors }}
-                {{ v_field }}
-                </br>
+            {% for field in form.visible_fields %}
+                {{ field.errors }}
+                {{ field.help_text }}
+                {{ field }}<br>
+                <div class="p-2"></div>
             {% endfor %}
-            <br>
-            <input type="submit" name="submit" value="Create Page">
+            <br />
+            <button class="btn btn-primary" type="submit" name="submit">Add Page</button>
+            <div class="p-5"></div>
         </form>
     </div>
+</div>
 {% endblock %}
