--- a/templates/rango/category_base.html
+++ b/templates/rango/category_base.html
@@ -5,26 +5,31 @@
     {% if category %}
         {{ category.name }}
     {% else %}
-        Rango Category
+        Unknown Category
     {% endif %}
 {% endblock %}
 
 {% block body_block %}
     {% if category %}
-        <h1> {{ category.name }}</h1>
-        {% if pages %}
-            <ul>
-                {% for page in pages %}
-                    <li> <a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <strong> There is no page available for this category</strong>
-        {% endif %}
-        {% if user.is_authenticated %}
-            <a href="{% url 'rango:add_page' category.slug %}">Add a Page</a>
-        {% endif %}
+    <div class="jumbotron p-4">
+        <div class="container">
+            <h1 class="jumbotron-heading">{{ category.name }}</h1>
+        </div>
+    </div>
+    {% if pages %}
+    <ul>
+        {% for page in pages %}
+        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+        {% endfor %}
+    </ul>
     {% else %}
-        The specified category does not exist!!
+    <strong>No pages currently in category.</strong>
+    {% endif %}
+
+    {% if user.is_authenticated %}
+    <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+    {% endif %}
+    {% else %}
+    The specified category does not exist.
     {% endif %}
 {% endblock %}
