--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -10,9 +10,13 @@
         <script src="{% static "js/jquery.js" %}"></script>
     </head>
     <body>
-        <h1>Rango says ...</h1>
-        <div>
-            hey there partner!<br/>
+        <div class=”jumbotron p-4”> 
+            <div class=”container”> 
+                <h1 class=”jumbotron-heading”>Rango says…</h1>
+                <div> 
+                    <h2 class=”h2”> Howdy {{ user.username }}! Hey there partner! </h2>
+                </div>
+            </div>
             <strong>{{boldmessage}}</strong> <br/>
         </div>
 
