--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -1,5 +1,9 @@
 {% extends "rango/base.html" %}
 {% block body_block %}
-    <h1>Logged Out</h1>
-    <p>You are now logged out.</p>
+    <div class="jumbotron p-4">
+        <div class="container">
+            <h1 class="jumbotron-heading">Logged Out</h1>
+        </div>
+    </div>
+    <p>You have been successfully logged out. Thanks for spending time on Rango!</p>
 {% endblock %}
